// Vitest Snapshot v1

exports[`Label component > renders a label 1`] = `
<div>
  <label
    class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
  >
    TEXT
  </label>
</div>
`;

exports[`Label component > renders an inline label 1`] = `
<div>
  <label
    class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-bsbHzT-type-inline c-cVSpVL-jroWjL-cv c-cVSpVL-ejCoEP-cv"
  >
    TEXT
  </label>
</div>
`;
